samples/_failures_safe/1761427541_1fa1b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_475cd02e.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_475cd02e.c:154:35: error: missing terminating " character
  154 |         case TOKEN_STRING: printf("
      |                                   ^
./samples/SAFE/__tmp_475cd02e.c:154:9: error: expected expression at end of input
  154 |         case TOKEN_STRING: printf("
      |         ^~~~
./samples/SAFE/__tmp_475cd02e.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_475cd02e.c:154:9: error: expected declaration or statement at end of input
